--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "scripts": {
     "build": "vite build",
     "build:extension:linux": "./build.sh",
-    "build:extension:windows" : "build.bat",
+    "build:extension:windows": "build.bat",
     "dev": "vite build --watch",
     "preview": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "svelte": "^5.0.0",
     "vite": "^7.0.0"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "tailwindcss": "^4.1.11"
   }
 }
